# occa

./: .gitattributes  .gitignore  CMakeLists.txt
include/occa/c/: base.h  device.h  memory.h
include/occa/core/: base.hpp  base.tpp  device.hpp  device.tpp  memory.hpp
include/occa/modes/cuda/: device.hpp  memory.hpp
include/occa/modes/hip/: device.hpp  memory.hpp
include/occa/modes/metal/: device.hpp  memory.hpp
include/occa/modes/opencl/: device.hpp  memory.hpp
include/occa/modes/serial/: device.hpp
src/c/: base.cpp  device.cpp  memory.cpp  types.cpp
src/core/: base.cpp  device.cpp  kernel.cpp  memory.cpp
src/modes/cuda/: device.cpp  kernel.cpp  memory.cpp  utils.cpp
src/modes/hip/: device.cpp  kernel.cpp  memory.cpp  utils.cpp
src/modes/metal/: device.cpp  memory.cpp
src/modes/opencl/: device.cpp  memory.cpp
src/modes/serial/: device.cpp  kernel.cpp  memory.cpp
tests/files/: argKernel.okl
tests/src/c/: base.cpp  device.cpp  kernel.cpp  memory.cpp
tests/src/core/: kernel.cpp  memory.cpp
tests/src/io/: utils.cpp
